[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/util/color/palette_client.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/shader/palette.gdshader" type="Shader" id=2]
[ext_resource path="res://assets/font/Plotter/PC/Plotter Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/menu/menu_entry.gd" type="Script" id=4]
[ext_resource path="res://assets/texture/dither.png" type="Texture" id=5]
[ext_resource path="res://src/util/text/display_text.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=254]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Image" id=258]
data = {
"data": PoolByteArray( 255, 255, 255, 0, 255, 227, 99, 255, 78, 74, 255, 255, 0, 0, 0, 255 ),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 4
}

[sub_resource type="ImageTexture" id=256]
flags = 0
flags = 0
image = SubResource( 258 )
size = Vector2( 4, 1 )

[sub_resource type="ShaderMaterial" id=257]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/palette_size = 4
shader_param/offset = 0
shader_param/blue_index_offset = 0.0
shader_param/palette = SubResource( 256 )

[node name="menu_entry" type="Label"]
margin_right = 172.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 24 )
focus_mode = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 254 )
text = "NUEVO JUEGO"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="fade_rect" type="TextureRect" parent="MarginContainer"]
show_behind_parent = true
material = SubResource( 257 )
margin_right = 172.0
margin_bottom = 24.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2

[node name="palette_client" parent="MarginContainer/fade_rect" instance=ExtResource( 1 )]
type = 1
index = 1

[node name="full_rect" type="ColorRect" parent="MarginContainer"]
visible = false
margin_right = 172.0
margin_bottom = 24.0
color = Color( 0, 0, 0, 1 )

[node name="display_text" parent="." instance=ExtResource( 7 )]
time_per_char_in_seconds = 0.025

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
